--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 .wrapper { 
   display: grid; 
-  grid-template-columns: repeat(4, 1fr); 
-  grid-auto-rows: 200px; 
+  grid-template-columns: repeat(3, 1fr); 
+  grid-auto-rows: 250px; 
 } 
 
 .menu { 
@@ -13,7 +13,7 @@
 
 .to_do_list { 
   grid-column-start: 2; 
-  grid-column-end: 5;
+  grid-column-end: 4;
   grid-row-start: 1; 
   grid-row-end: 5;
 }
@@ -32,4 +32,71 @@
   background-color: #ffd8a8;
   padding: 1em;
   color: #d9480f;
+}
+
+ul {list-style-type: none;}
+body {font-family: Verdana, sans-serif;}
+
+.month {
+  padding: 70px 25px;
+  width: 100%;
+  background: #1abc9c;
+  text-align: center;
+}
+
+.month ul {
+  margin: 0;
+  padding: 0;
+}
+
+.month ul li {
+  color: white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.month .prev {
+  float: left;
+  padding-top: 10px;
+}
+
+.month .next {
+  float: right;
+  padding-top: 10px;
+}
+
+.weekdays {
+  margin: 0;
+  padding: 10px 0;
+  background-color: #ddd;
+}
+
+.weekdays li {
+  display: inline-block;
+  width: 13%;
+  color: #666;
+  text-align: center;
+}
+
+.days {
+  padding: 10px 0;
+  background: #eee;
+  margin: 0;
+}
+
+.days li {
+  list-style-type: none;
+  display: inline-block;
+  width: 13%;
+  text-align: center;
+  margin-bottom: 5px;
+  font-size:12px;
+  color: #777;
+}
+
+.days li .active {
+  padding: 5px;
+  background: #1abc9c;
+  color: white !important
 }
