--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@
   color: #d9480f;
 }
 
-ul {list-style-type: none;}
 body {font-family: Verdana, sans-serif;}
 
 .month {
@@ -47,6 +46,7 @@ body {font-family: Verdana, sans-serif;}
 .month ul {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 .month ul li {
