--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 .wrapper { 
   display: grid; 
   grid-template-columns: repeat(3, 1fr); 
-  grid-auto-rows: 250px; 
+  grid-auto-rows: minmax(250px, auto); 
+  grid-gap: 5px;
 } 
 
 .menu { 
@@ -99,4 +100,43 @@ body {font-family: Verdana, sans-serif;}
   padding: 5px;
   background: #1abc9c;
   color: white !important
+}
+
+.goal_small {
+  background-color:#fff4e6;
+  border-radius: 5px;
+  border: 5px #f76707;
+  padding: 10px;
+  margin: 10px;
+}
+
+.goals { 
+  grid-column-start: 1; 
+  grid-column-end: 1; 
+  grid-row-start: 1; 
+}
+
+.in_progress { 
+  grid-column-start: 2; 
+  grid-column-end: 2; 
+  grid-row-start: 1; 
+
+}
+
+.completed { 
+  grid-column-start: 3; 
+  grid-column-end: 3; 
+  grid-row-start: 1; 
+
+}
+
+img {
+  display: block;
+  margin: auto;
+  padding: 10px;
+}
+
+p{
+  font-weight: bold;
+  padding: 0 0 0 20px;
 }
