--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,58 @@
-.wrapper { 
-  display: grid; 
-  grid-template-columns: repeat(3, 1fr); 
-  grid-auto-rows: 250px; 
-} 
-
-.menu { 
-  grid-column-start: 1; 
-  grid-column-end: 2; 
-  grid-row-start: 1; 
-  grid-row-end: 3; 
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 250px;
 }
 
-.to_do_list { 
-  grid-column-start: 2; 
-  grid-column-end: 4;
-  grid-row-start: 1; 
-  grid-row-end: 5;
-}
-
-.calender { 
+.menu {
   grid-column-start: 1;
   grid-column-end: 2;
-  grid-row-start: 3; 
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.to_do_list {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 1;
   grid-row-end: 5;
 }
+
+.calender {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+
+.task-card-img {
+  width: 90%;
+  height: 120px;
+  background-color: #FFFFFF;
+  text-align: center;
+}
+
+.task-table {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.task-table li{
+  margin-top: 10px;
+}
+
+.algin-center {
+  text-align: center;
+}
+
+.today_task_list {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
 * {box-sizing: border-box;}
 
 .wrapper > div {
